--- a/views/index.haml
+++ b/views/index.haml
@@ -7,7 +7,7 @@
   %meta{'http-equiv' => 'content-language', :content => @locale}
   %meta{:name => 'description', :content => HACKERSPACE::CONFIGURATION[:locales][@locale][:description]}
   %meta{:name => 'keywords', :content => HACKERSPACE::CONFIGURATION[:locales][@locale][:keywords]}
-  %link{:rel => 'icon', :type => 'image/x-icon', :href => "/images/#{HACKERSPACE::NAME}_icon.png"}
+  %link{:rel => 'icon', :type => 'image/x-icon', :href => "/images/#{HACKERSPACE::NAME}.ico"}
   %link{:rel => 'stylesheet', :href => '/stylesheets/layout.css', :media => 'all', :type => 'text/css'}
  %body
   %div#p_head
@@ -22,7 +22,7 @@
        %a.menu{:href => HACKERSPACE::SEPARATOR + @locale}#{HACKERSPACE::CONFIGURATION[:locales][@locale][:menu][i]}
   %div#p_data
    %div#data
-    %div#head
+    %div#t_head
      %a.head #{HACKERSPACE::CONFIGURATION[:locales][@locale][:head][:text]}
     - for i in HACKERSPACE::CONFIGURATION[:locales][@locale][:head][:p].keys.sort
      %p #{HACKERSPACE::CONFIGURATION[:locales][@locale][:head][:p][i]}
