Menu has been changed

--- a/views/index.haml
+++ b/views/index.haml
@@ -21,8 +21,8 @@
       %a.menu{:href => HACKERSPACE::SEPARATOR + @locale}#{HACKERSPACE::CONFIGURATION[:locales][@locale][:menu][0]}
       %a.menu{:href => "http://wiki#{HACKERSPACE::CHAR_DOT + HACKERSPACE::CONFIGURATION[:domain]}"}#{HACKERSPACE::CONFIGURATION[:locales][@locale][:menu][1]}
       %a.menu{:href => 'http://groups.google.com/group/hackerspace-minsk'}#{HACKERSPACE::CONFIGURATION[:locales][@locale][:menu][2]}
-      %a.menu{:href => HACKERSPACE::SEPARATOR + @locale + HACKERSPACE::Site::PATH_IRC}#{HACKERSPACE::CONFIGURATION[:locales][@locale][:menu][3]}
-      %a.menu{:href => HACKERSPACE::SEPARATOR + @locale + HACKERSPACE::Site::PATH_ABOUT}#{HACKERSPACE::CONFIGURATION[:locales][@locale][:menu][4]}
+      %a.menu{:href => HACKERSPACE::SEPARATOR + @locale + HACKERSPACE::Site::PATH_ABOUT}#{HACKERSPACE::CONFIGURATION[:locales][@locale][:menu][3]}
+      %a.menu{:href => HACKERSPACE::SEPARATOR + @locale + HACKERSPACE::Site::PATH_CONTACTS}#{HACKERSPACE::CONFIGURATION[:locales][@locale][:menu][4]}
   %div#p_data
    %div#data
     %div#t_head
