Icon viewing has been fixed

--- a/views/index.haml
+++ b/views/index.haml
@@ -7,7 +7,7 @@
   %meta{'http-equiv' => 'content-language', :content => @locale}
   %meta{:name => 'description', :content => HACKERSPACE::CONFIGURATION[:locales][@locale][:description]}
   %meta{:name => 'keywords', :content => HACKERSPACE::CONFIGURATION[:locales][@locale][:keywords]}
-  %link{:rel => 'icon', :type => 'image/x-icon', :href => "/images/#{HACKERSPACE::NAME}.ico"}
+  %link{:rel => 'shortcut icon', :type => 'image/x-icon', :href => "/images/#{HACKERSPACE::NAME}.ico"}
   %link{:rel => 'stylesheet', :href => '/stylesheets/layout.css', :media => 'all', :type => 'text/css'}
  %body
   %div#p_head
